--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
-  <body class="bg-gray-100">
+  <body class="bg-gray-100 font-body">
     <noscript>
       <strong>We're sorry but ispyb-logistics doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
