--- a/client/lab14/index.html
+++ b/client/lab14/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head><title>ISPyB Logistics Lab14</title></head>
-  <body>
+  <body class="bg-gray-100 font-body">
     <div id="app"></div>
     <script type="module" src="/src/apps/lab14/main.js"></script>
   </body>
