--- a/client/stores/index.html
+++ b/client/stores/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head><title>ISPyB Logistics Stores</title></head>
-  <body>
+  <body class="bg-gray-100 font-body">
     <div id="app"></div>
     <script type="module" src="/src/apps/stores/main.js"></script>
   </body>
