--- a/client/index.html
+++ b/client/index.html
@@ -5,13 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="/static/favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>ISPyB Logistics App</title>
   </head>
   <body class="bg-gray-100 font-body">
     <noscript>
       <strong>We're sorry but ispyb-logistics doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
+    <script type="module" src="/src/main.js"></script>
     <!-- built files will be auto injected -->
   </body>
 </html>
